WIP: Creating new complex transaction type using inputs and outputs